--- a/tekton-pipelines/base/tasks/buildpack-task.yaml
+++ b/tekton-pipelines/base/tasks/buildpack-task.yaml
@@ -31,7 +31,6 @@ spec:
       default: ""
     - name: platform_dir
       description: The name of the platform directory.
-      default: empty-dir
     - name: user_id
       description: The user ID of the builder image user.
       default: "1000"
@@ -82,71 +81,6 @@ spec:
           mountPath: /layers
         - name: $(params.cache)
           mountPath: /cache
-      securityContext:
-        privileged: true
-    
-    # I dislike this hack 
-    # https://github.com/tektoncd/catalog/blob/main/task/buildpacks/0.3/buildpacks.yaml#L68-L113
-    # but we should use it until this is resolved:
-    # - https://github.com/buildpacks/tekton-integration/issues/33
-    # - https://github.com/buildpacks/tekton-integration/issues/32
-    # TODO: check in the future and adjust when project.toml is clear to be supported.
-    - name: set-env-vars
-      image: saritasallc/python3:0.1@sha256:cb4be451c918cbd924e5380b1027afa66e232c8524e75afd4c2c771df213210e
-      script: |
-        #!/usr/bin/env python3
-        import re, toml, os, sys
-
-        source_path = "$(resources.inputs.app.path)/project.toml"
-        env_dir = "/platform/env"
-        vars_prefixes = [
-          # google buildpacks
-          "GOOGLE_", "GO", "MAVEN_", "NPM_", "COMPOSER_", "PIP_", "BUNDLE_",
-          # paketo buildpacks
-          "BP_",
-          # paketo dotnet buildpacks
-          "DOTNET", "RUNTIME_VERSION", "SDK_LOCATION",
-          # paketo go buildpacks
-          "DEPCACHEDIR",
-          # paketo nodejs buildpacks
-          "NODE_", "MEMORY_",
-          # paketo php buildpacks
-          "APP_", "SERVER_", "MIBDIRS", "PHP_",
-          # paketo ruby buildpacks
-          "GEM_", "BUNDLE_"
-        ]
-
-        try:
-          with open(source_path, "r") as f:
-            parsed = toml.load(f)
-        except FileNotFoundError:
-          quit()
-        except Exception as e:
-          raise Exception("Toml file couldn't be parsed\nTraceback: {e}")
-
-        env_vars = parsed.get("build", {}).get("env", [])
-        env_vars = {item["name"]: item["value"] for item in env_vars}
-
-        # create directory if not exists
-        if env_vars and not os.path.exists(env_dir):
-            os.makedirs(env_dir)
-
-        # create env variables files
-        regex = f"^({'|'.join(vars_prefixes)})"
-        for name, value in env_vars.items():
-          if re.match(regex, name):
-            with open(f"{env_dir}/{name}", "w") as f:
-              f.write(value)
-              print(
-                f"Created `{env_dir}/{name}` var file with `{value}` value",
-                file=sys.stdout
-              )
-
-      volumeMounts:
-        - name: layers-dir
-          mountPath: /layers
-        - name: $(params.platform_dir)
-          mountPath: /platform
       securityContext:
         privileged: true
 
@@ -233,7 +167,7 @@ spec:
           -project-metadata=/workspace/app/project.toml \
           -cache-dir=/cache \
           -layers=/layers \
-          -platform=/platform \
+          -platform=$(workspaces.source.path)/$(params.platform_dir) \
           -report=/layers/report.toml \
           -cache-image=$(params.cache_image) \
           -uid=$(params.user_id) \
@@ -249,8 +183,6 @@ spec:
           mountPath: /layers
         - name: $(params.cache)
           mountPath: /cache
-        - name: $(params.platform_dir)
-          mountPath: /platform
       securityContext:
         runAsUser: 1000
         runAsGroup: 1000
