--- a/tekton-pipelines/kaniko/build-pipeline.yaml
+++ b/tekton-pipelines/kaniko/build-pipeline.yaml
@@ -152,4 +152,7 @@ spec:
           value: "$(params.environment)"
         - name: status
           value: "$(tasks.argocd-deploy.status)"
+      workspaces:
+        - name: source
+          workspace: source
 
