--- a/tekton-pipelines/wordpress/triggers/build-pipeline-trigger.yaml
+++ b/tekton-pipelines/wordpress/triggers/build-pipeline-trigger.yaml
@@ -58,7 +58,10 @@ spec:
           value: "$(tt.params.branch)"
         - name: kubernetes_namespace
           value: "$(tt.params.kubernetes_namespace)"
-
+      workspaces:
+        - name: source
+          persistentVolumeClaim:
+            claimName: $(tt.params.application)-workspace-pvc
       podTemplate:
         volumes:
         - name: podinfo
