--- a/tekton-pipelines/buildpacks-dotnet/build-pipeline.yaml
+++ b/tekton-pipelines/buildpacks-dotnet/build-pipeline.yaml
@@ -161,4 +161,7 @@ spec:
           value: "$(params.environment)"
         - name: status
           value: "$(tasks.argocd-deploy.status)"
+      workspaces:
+        - name: source
+          workspace: source
 
