--- a/tekton-pipelines/buildpacks-frontend/build-pipeline.yaml
+++ b/tekton-pipelines/buildpacks-frontend/build-pipeline.yaml
@@ -159,4 +159,7 @@ spec:
           value: "$(params.environment)"
         - name: status
           value: "$(tasks.argocd-deploy.status)"
+      workspaces:
+        - name: source
+          workspace: source
 
