--- a/tekton-pipelines/base/tasks/kaniko-task.yaml
+++ b/tekton-pipelines/base/tasks/kaniko-task.yaml
@@ -65,6 +65,7 @@ spec:
       args:
         - --dockerfile=$(resources.inputs.app.path)/$(params.docker_file)
         - --context=$(resources.inputs.app.path)/$(params.docker_context)
+        - --build-arg=ENVIRONMENT=$(ENVIRONMENT)
         - --destination=$(resources.outputs.image.url)
         # - --verbosity=debug
 
