feat: fix issue with cleaning env vars

--- a/tekton-pipelines/base/tasks/buildpack-env-vars-task.yaml
+++ b/tekton-pipelines/base/tasks/buildpack-env-vars-task.yaml
@@ -37,7 +37,7 @@ spec:
 
         # clean platform env dir before new run, so when env var is removed from project.toml file it wouldn't influence the build
         ENV_PATH=$(workspaces.source.path)/$(params.platform_dir)/env
-        if [ -d $ENV_PATH ]; then
+        if [ -d $ENV_PATH ] && [ ! -z `ls -A $ENV_PATH` ]; then
           echo "clean everything from $ENV_PATH"
           rm $ENV_PATH/*
         fi
