--- a/tekton-pipelines/buildpacks-jekyll/tasks/build.yaml
+++ b/tekton-pipelines/buildpacks-jekyll/tasks/build.yaml
@@ -92,7 +92,7 @@ spec:
         # jekyll related
         if [ -f $(resources.inputs.app.path)/_config.yml ]; then
           cd $(resources.inputs.app.path)
-          yes | bundle install --silent
+          yes | bundle install --quiet
           bundle exec jekyll build
           cp -rf {project.toml,nginx.conf,buildpack.yml,nginx.d,.nginx.d,nginx.*,httpd.conf,.http.d,httpd.d} $(params.source_subpath) 2>/dev/null
           chown -R $(params.user_id):$(params.group_id) $(params.source_subpath)
